@@ -17,6 +17,7 @@ path.photongi.indirect.lookup.radius = 0.0
 #path.photongi.indirect.glossinessusagethreshold = 0.0
 #path.photongi.indirect.usagethresholdscale = 0.0
 #path.photongi.indirect.filter.radiusscale = 4.0
+#path.photongi.persistent.file = cornell.pgi
 ##
 path.photongi.caustic.enabled = 0
 path.photongi.caustic.maxsize = 10000
