@@ -17,6 +17,7 @@
  ***************************************************************************/
 
 #include "slg/engines/caches/photongi/photongicache.h"
+#include "luxrays/utils/safesave.h"
 
 using namespace std;
 using namespace luxrays;
@@ -26,10 +27,67 @@ using namespace slg;
 // PhotonGICache serialization
 //------------------------------------------------------------------------------
 
+void PhotonGICache::LoadPersistentCache(const std::string &fileName) {
+	SLG_LOG("Loading persistent PhotonGI cache: " + fileName);
+
+	SerializationInputFile sif(fileName);
+
+	sif.GetArchive() >> params;
+
+	delete visibilityParticlesKdTree;
+	visibilityParticlesKdTree = nullptr;
+	visibilityParticles.clear();
+	visibilityParticles.shrink_to_fit();
+
+	sif.GetArchive() >> radiancePhotons;
+	sif.GetArchive() >> radiancePhotonsBVH;
+	sif.GetArchive() >> indirectPhotonTracedCount;
+
+	sif.GetArchive() >> causticPhotons;
+	sif.GetArchive() >> causticPhotonsBVH;
+	sif.GetArchive() >> causticPhotonTracedCount;
+
+	if (!sif.IsGood())
+		throw runtime_error("Error while loading PhotonGI persistent cache: " + fileName);
+	
+}
+
+void PhotonGICache::SavePersistentCache(const std::string &fileName) {
+	SLG_LOG("Saving persistent PhotonGI cache: " + fileName);
+
+	SafeSave safeSave(fileName);
+	SerializationOutputFile sof(params.persistent.safeSave ? safeSave.GetSaveFileName() : fileName);
+
+	sof.GetArchive() << params;
+
+	sof.GetArchive() << radiancePhotons;
+	sof.GetArchive() << radiancePhotonsBVH;
+	sof.GetArchive() << indirectPhotonTracedCount;
+
+	sof.GetArchive() << causticPhotons;
+	sof.GetArchive() << causticPhotonsBVH;
+	sof.GetArchive() << causticPhotonTracedCount;
+
+	if (!sof.IsGood())
+		throw runtime_error("Error while saving PhotonGI persistent cache: " + fileName);
+
+	sof.Flush();
+	
+	if (params.persistent.safeSave)
+		safeSave.Process();
+
+	SLG_LOG("PhotonGI persistent cache saved: " << (sof.GetPosition() / 1024) << " Kbytes");
+}
+
+//------------------------------------------------------------------------------
+// PhotonGICache serialization
+//------------------------------------------------------------------------------
+
 BOOST_CLASS_EXPORT_IMPLEMENT(slg::GenericPhoton)
 BOOST_CLASS_EXPORT_IMPLEMENT(slg::VisibilityParticle)
 BOOST_CLASS_EXPORT_IMPLEMENT(slg::Photon)
 BOOST_CLASS_EXPORT_IMPLEMENT(slg::RadiancePhoton)
+BOOST_CLASS_EXPORT_IMPLEMENT(slg::PhotonGICacheParams)
 BOOST_CLASS_EXPORT_IMPLEMENT(slg::PhotonGICache)
 
 template<class Archive> void PhotonGICache::serialize(Archive &ar, const u_int version) {
